# Driftmap

./: .driftmap.db  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEEP_DIVE.md  DESIGN_MANIFEST.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  ayo.txt  by.txt  deny.toml  driftmap.toml  install.sh  v1.1.txt
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cf-cloud-proxy/: index.js  package-lock.json  package.json  wrangler.toml
cf-cloud-scorer/: index.js  package-lock.json  package.json  wrangler.toml
cf-dashboard/: schema.sql  wrangler.toml
cf-dashboard/functions/api/: drift.js
cf-dashboard/functions/api/auth/: send.js  verify.js
cf-dashboard/public/: _worker.js  history.html  index.html  live.html  login.html  onboarding.html
cf-socket/: index.js  wrangler.toml
cf-subject-a/: index.js  wrangler.toml
cf-subject-b/: index.js  wrangler.toml
deploy/helm/driftmap/: Chart.yaml  values.yaml
deploy/helm/driftmap/templates/: configmap.yaml  daemonset.yaml
deploy/systemd/: driftmap.service
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  how-it-works.md  performance.md
driftmap-cli/: Cargo.toml
driftmap-cli/src/: config.rs  main.rs  proxy.rs
driftmap-core/: Cargo.toml
driftmap-core/benches/: parser_bench.rs  schema_bench.rs
driftmap-core/src/: capture.rs  diff.rs  distribution.rs  export.rs  http.rs  lib.rs  matcher.rs  pipeline.rs  plugins.rs  schema.rs  scorer.rs  semantic.rs  state.rs  store.rs
driftmap-plugin-sdk/: Cargo.toml
driftmap-plugin-sdk/src/: lib.rs
driftmap-probe/: Cargo.toml
driftmap-probe-common/: Cargo.toml
driftmap-probe-common/src/: lib.rs
driftmap-probe/src/: main.rs
driftmap-tui/: Cargo.toml
driftmap-tui/src/: app.rs  events.rs  lib.rs  main.rs  ui.rs
examples/comparison/: package-lock.json  package.json  service_a.js  service_b.js
examples/prettier_compare/v2/: package-lock.json  package.json  server.js
examples/prettier_compare/v3/: package-lock.json  package.json  server.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_http_parser.rs
plugins/grpc-scorer/: Cargo.toml
plugins/grpc-scorer/src/: lib.rs
scripts/: az_simulation.js  drift_gate.js  gemini_agent.js  login_bot.js
xcol-onboarding/public/: index.html
