[package]
name = "driftmap-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "driftmap"
path = "src/main.rs"

[dependencies]
driftmap-tui = { path = "../driftmap-tui" }
driftmap-core = { path = "../driftmap-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

dialoguer = "0.11"
notify = "6.1"
similar = "2.3"
console = "0.15"
axum = "0.8.8"
reqwest = "0.13.2"
indicatif = "0.18.4"
ratatui = "0.30.0"
crossterm = "0.29.0"
