[package]
name = "driftmap-core"
version = "0.1.0"
edition = "2021"

[dependencies]
httparse = "1.8"
driftmap-probe-common = { path = "../driftmap-probe-common", features = ["userspace"] }
aya = { version = "0.12", features = ["tokio"] }
aya-log = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
