[package]
name = "driftmap-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
wasmtime = "20.0"
rusqlite = { version = "0.31", features = ["bundled"] }
httparse = "1.8"
driftmap-probe-common = { path = "../driftmap-probe-common", features = ["userspace"] }
aya = { version = "0.12", features = ["tokio"] }
aya-log = "=0.1.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "schema_bench"
harness = false

