[package]
name = "driftmap-fuzz"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
driftmap-core = { path = "../driftmap-core" }

[[bin]]
name = "fuzz_http_parser"
path = "fuzz_targets/fuzz_http_parser.rs"
test = false
doc = false
